# blink-monitor

./: .dockerignore  .gitignore  Dockerfile  README.md  dev_logs.txt  docker-compose.yml  index.html  package-lock.json  package.json
.github/workflows/: windows-build.yml
docker/: nginx.conf
server/: Cargo.toml  Dockerfile
server/src/: main.rs  media.rs  storage.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: ffmpeg.json
src-tauri/src/: blink.rs  immi.rs  lib.rs  main.rs  server.rs  storage.rs
src/components/: CameraCard.tsx  CameraSettings.tsx  MediaCard.tsx  MpegtsPlayer.tsx  Sidebar.tsx  TimelineView.tsx  VideoControls.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  tabs.tsx
src/lib/: apiClient.ts
