[package]
name = "blink-monitor-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies", "stream"] }
anyhow = "1"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
regex = "1.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
futures-util = "0.3"
http = "1.0"
url = "2.5"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-native-certs = "0.8"
bytes = "1.6"
rustls-pki-types = "1"
