[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies", "stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
regex = "1.10"
rand = "0.8"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
futures-util = "0.3"
tauri-plugin-shell = "2.0.0"
http = "1.0"
url = "2.5"
tokio-rustls = "0.26"
rustls = "0.23"
bytes = "1.6"
rustls-pki-types = "1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2.6.0"

